# studia

./: .gitignore
cwiczenia/cwiczenia5/src/: App.java  Tablice.java
cwiczenia/cwiczenia6/: cwiczenia6.drawio
cwiczenia/kolokwium2/src/: App.java  Obserwator.java  Obserwator1.java  Obserwator3.java  ZliczaczSlow.java
cwiczenia/paradygmatySem3/cwiczenia1/: main.ml  main.scala
cwiczenia/paradygmatySem3/cwiczenia2/: main.ml  main.scala
cwiczenia/paradygmatySem3/cwiczenia3/: main.ml
cwiczenia/paradygmatySem3/cwiczenia4/: main.ml
cwiczenia/paradygmatySem3/cwiczenia5/: main.ml
cwiczenia/paradygmatySem3/cwiczenia6/: main.scala
cwiczenia/pioSem4/: diagramKlas.pu  wyszukiwanieParkingow.pu
cwiczenia/pioSem4/wyszukiwanieParkingow/: wyszukiwanieParkingow.pu  wyszukiwanieParkingow.puml  wyszukiwanieParkingow.vpp
cwiczenia/programowanieSem1/cwiczenia5/: .$macierz.drawio.bkp  macierz.drawio
laby/algorytmySem2/laby6/: insertionSortOrdered.csv  result.xlsx  (+11 more)
laby/bazySem4/: szkola.sql  szkola_lampp_autogen.sql
laby/lista5/: osoby.ser
laby/lista5-6/: kursy.ser
laby/lista7/: pom.xml
laby/src/: App.java
laby/tepSem3/laby3/: CMakeLists.txt  TreeCliParser.cpp  main.cpp  tree.cpp  treeCli.cpp  treeCliParser.cpp  treeNodes.cpp
laby/tepSem3/laby3/include/: tree.h  treeCli.h  treeCliParser.h  treeConstants.h  treeNode.h  treeNodes.h  treeParser.h
laby/tepSem3/laby5/tree/: CMakeLists.txt  tree.cpp  treeCli.cpp  treeCliParser.cpp
laby/tepSem3/laby5/tree/include/: tree.h  treeCli.h  treeCliParser.h  treeConstants.h  treeNodes.h
laby/uczelnia/: kursy.ser
(+329 files in other folders)
